--- a/ASP .NET Core/ASP MVC I/PortfolioII/Views/Shared/Contact.cshtml
+++ b/ASP .NET Core/ASP MVC I/PortfolioII/Views/Shared/Contact.cshtml
@@ -6,8 +6,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact</title>
     </head>
-    <body style="text-align : center">
+    <body style="text-align : center; margin : 0px auto;">
         <h3><a href="/">Home</a> | <a href="/projects">Projects</a> | Contact</h3>
         <h1>Contact Me</h1>
+
+        <form style="display: flex;">
+            <div>
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" name="name">
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="text" name="email">
+                </div>
+            </div>
+            <div>
+                <label for="message">Message</label>
+                <br>
+                <textarea name="message" cols="30" rows="10"></textarea>
+            </div>
+        </form>
+        <a href="/">Send</a>
     </body>
 </html>
