--- a/Lectures/Week1/ASPNetDemo/Views/Shared/Videos.cshtml
+++ b/Lectures/Week1/ASPNetDemo/Views/Shared/Videos.cshtml
@@ -1,10 +1,10 @@
-<h1>@ViewBag.Title</h1>
+@model VideosView
 
-@foreach (string videoId in ViewBag.YoutubeVideoIds)
+<h1>@Model.Title</h1>
+
+@foreach (string videoId in Model.YoutubeVideoIds)
 {
-    <iframe width="560" height="400" src="https://www.youtube.com/embed/@videoId" title="YouTube video player"
-    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen></iframe>
+    <iframe width="560" height="400" src="https://www.youtube.com/embed/@videoId" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 }
 
 <a href="/">Home</a>
