--- a/Lectures/Week1/ASPNetDemo/Views/Home/Index.cshtml
+++ b/Lectures/Week1/ASPNetDemo/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 
 <a href="/videos">Videos</a>
 <a href="/showingModel">MyModel</a>
+<a href="/users/register">Register</a>
 
 @{
     string helloWorld = "Hello World";
