--- a/ASP .NET Core/ASP MVC II/DojoSurveyWithValidations/Views/Shared/Register.cshtml
+++ b/ASP .NET Core/ASP MVC II/DojoSurveyWithValidations/Views/Shared/Register.cshtml
@@ -30,7 +30,7 @@
             <div>
                 <span asp-validation-for="FaveLang"></span>
                 <br>
-                <label asp-for="FaveLang">Favorite Language</label>
+                <label asp-for="FaveLang"></label>
                 <select asp-for="FaveLang">
                     <option value="Python">Python</option>
                     <option value="C#">C#</option>
