--- a/ASP .NET Core/ASP MVC II/Dojodachi/Views/_ViewImports.cshtml
+++ b/ASP .NET Core/ASP MVC II/Dojodachi/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using Dojodachi
-@using Dojodachi.Models
+﻿@using DojodachiGame
+@using DojodachiGame.Models
+@using Microsoft.AspNetCore.Http;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
