--- a/Lectures/Week1/SessionAndValidation/Views/_ViewImports.cshtml
+++ b/Lectures/Week1/SessionAndValidation/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SessionAndValidation
 @using SessionAndValidation.Models
+@using Microsoft.AspNetCore.Http
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
