--- a/Lectures/Week2/EntityFramework/Views/Shared/_Layout.cshtml
+++ b/Lectures/Week2/EntityFramework/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model Post
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,6 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                        <form asp-controller="User" asp-action="Logout" method="post">
+                            <button type="submit">Logout</button>
+                        </form>
                     </ul>
                 </div>
             </div>
