--- a/Lectures/Week2/EntityFramework/Views/Post/All.cshtml
+++ b/Lectures/Week2/EntityFramework/Views/Post/All.cshtml
@@ -11,8 +11,7 @@
 <body>
     <h3>Welcome @Context.Session.GetString("name"), ID: @Context.Session.GetInt32("UUID")</h3>
     <h1>View our posts</h1>
-    @{
-        foreach (Post item in Model)
+    @foreach (Post item in Model)
         {
             <div>
                 <h3>@item.Topic</h3>
@@ -25,7 +24,6 @@
                 <a asp-controller="Post" asp-action="GetOne" asp-route-postId="@item.PostId">View Details</a>
             </div>
         }
-    }
     <a href="/post/new">New Post</a>
 </body>
 </html>
