--- a/ORMs/Entity Framework/LoginAndRegistration/Views/_ViewImports.cshtml
+++ b/ORMs/Entity Framework/LoginAndRegistration/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using EntityFrameworkDemo
-@using EntityFrameworkDemo.Models
+﻿@using LoginAndRegistration
+@using LoginAndRegistration.Models
 @using Microsoft.AspNetCore.Http
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
