--- a/ORMs/Entity Framework/BankAccounts/Views/User/Login.cshtml
+++ b/ORMs/Entity Framework/BankAccounts/Views/User/Login.cshtml
@@ -21,7 +21,7 @@
                 <span asp-validation-for="LoginPassword"></span>
                 <input asp-for="LoginPassword">
             </div>
-            <button type="submit">SUBMIT</button>
+            <button type="submit">Log In</button>
         </form>
         <a asp-controller="User" asp-action="Registration" >Need to Register?</a>
     </body>
