--- a/ORMs/Entity Framework/BankAccounts/Views/User/Register.cshtml
+++ b/ORMs/Entity Framework/BankAccounts/Views/User/Register.cshtml
@@ -40,7 +40,7 @@
                 <span asp-validation-for="ConfirmPassword"></span>
                 <input asp-for="ConfirmPassword">
             </div>
-            <button type="submit">Submit</button>
+            <button type="submit">Register</button>
         </form>
         <a asp-controller="User" asp-action="Login">Already Registered?</a>
     </body>
