--- a/ORMs/Entity Framework/BankAccounts/Views/Shared/_Layout.cshtml
+++ b/ORMs/Entity Framework/BankAccounts/Views/Shared/_Layout.cshtml
@@ -20,10 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            @{if(Context.Session.GetInt32("UserId") != null)
+                            {
+                                <form asp-controller="User" asp-action="Logout" method="POST">
+                                        <button>Logout</button>
+                                </form>
+                            }
+                            else
+                            {
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                            }}
                         </li>
                     </ul>
                 </div>
