--- a/ORMs/Entity Framework/WeddingPlanner/Views/Attendee/_Register.cshtml
+++ b/ORMs/Entity Framework/WeddingPlanner/Views/Attendee/_Register.cshtml
@@ -12,31 +12,32 @@
         <form asp-controller="Attendee" asp-action="Register" method="POST">
             <h1>Register</h1>
             <div>
-                <label asp-for="FirstName"></label>
-                <span asp-validation-for="FirstName"></span>
-                <input asp-for="FirstName">
+                <label asp-for="FirstName" class="form-label"></label>
+                <span asp-validation-for="FirstName" style="color: red; font-weight: bold;"></span>
+                <input asp-for="FirstName" class="form-control">
             </div>
             <div>
-                <label asp-for="LastName"></label>
-                <span asp-validation-for="LastName"></span>
-                <input asp-for="LastName">
+                <label asp-for="LastName" class="form-label"></label>
+                <span asp-validation-for="LastName" style="color: red; font-weight: bold;"></span>
+                <input asp-for="LastName" class="form-control">
             </div>
             <div>
-                <label asp-for="Email"></label>
-                <span asp-validation-for="Email"></span>
-                <input asp-for="Email">
+                <label asp-for="Email" class="form-label"></label>
+                <span asp-validation-for="Email" style="color: red; font-weight: bold;"></span>
+                <input asp-for="Email" class="form-control">
             </div>
             <div>
-                <label asp-for="Password"></label>
-                <span asp-validation-for="Password"></span>
-                <input asp-for="Password">
+                <label asp-for="Password" class="form-label"></label>
+                <span asp-validation-for="Password" style="color: red; font-weight: bold;"></span>
+                <input asp-for="Password" class="form-control">
             </div>
             <div>
-                <label asp-for="ConfirmPassword"></label>
-                <span asp-validation-for="ConfirmPassword"></span>
-                <input asp-for="ConfirmPassword">
+                <label asp-for="ConfirmPassword" class="form-label"></label>
+                <span asp-validation-for="ConfirmPassword" style="color: red; font-weight: bold;"></span>
+                <input asp-for="ConfirmPassword" class="form-control">
             </div>
-            <button type="submit">Register</button>
+            <br>
+            <button type="submit" class="btn btn-outline-success">Register</button>
         </form>
     </body>
 </html>
