--- a/ORMs/Belt Prep/ECommerce/Views/Shared/Dashboard.cshtml
+++ b/ORMs/Belt Prep/ECommerce/Views/Shared/Dashboard.cshtml
@@ -6,7 +6,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Dashboard</title>
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/WeddingPlanner.styles.css" asp-append-version="true" />
     </head>
     <body>
         <div style="margin-left: 70px; margin-top: 50px;">
@@ -21,10 +24,12 @@
             <div style="display: flex; flex-wrap: wrap;">
                 @foreach (Product item in Model)
                 {
-                    <div style="border: 2px solid black; height: 150px; width: 100px;">
-                        <img src="" alt="Product Image" height="75px" width="75px">
-                        <h4>@item.Name</h4>
-                        <p>(@item.Quantity left)</p>
+                    <div class="card" style="width: 18rem;">
+                        <img src="" alt="Product Image" class="card-img-top">
+                        <div  class="card-body">
+                            <h4>@item.Name</h4>
+                            <p>(@item.Quantity left)</p>
+                        </div>
                     </div>
                 }
             </div>
@@ -32,14 +37,14 @@
                 <h4>Recent Orders</h4>
                 @foreach (Order o in ViewBag.Orders)
                 {
-                    <p>@o.Customer.FirstName purchased @o.OrderQuantity @o.Product ... (@o.CreatedAt)</p>
+                    <p>@o.Customer.FirstName purchased @o.OrderQuantity @o.Product.Name ... (@o.CreatedAt.ToString("MMMM d, yyyy"))</p>
                 }
             </div>
             <div>
                 <h4>New Customers</h4>
                 @foreach (Customer c in ViewBag.Customers)
                 {
-                    <p>@c.FirstName @c.LastName joined the store (@c.CreatedAt)</p>
+                    <p>@c.FirstName @c.LastName joined the store (@c.CreatedAt.ToString("MMMM d, yyyy"))</p>
                 }
             </div>
         </div>
