--- a/ORMs/Belt Prep/ECommerce/Views/Shared/Orders.cshtml
+++ b/ORMs/Belt Prep/ECommerce/Views/Shared/Orders.cshtml
@@ -6,7 +6,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Orders</title>
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/WeddingPlanner.styles.css" asp-append-version="true" />
     </head>
     <body>
         <div style="margin-left: 70px; margin-top: 50px;">
@@ -44,13 +47,13 @@
             <button type="submit">Order</button>
         </form>
 
-        <table>
+        <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>Customer Name</th>
-                    <th>Product</th>
-                    <th>Quantity</th>
-                    <th>Date</th>
+                    <th scope="col">Customer Name</th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Date</th>
                 </tr>
             </thead>
             <tbody>
@@ -60,7 +63,7 @@
                         <td>@o.Customer.FullName()</td>
                         <td>@o.Product.Name</td>
                         <td>@o.OrderQuantity</td>
-                        <td>@o.CreatedAt</td>
+                        <td>@o.CreatedAt.ToString("MMMM d, yyyy")</td>
                     </tr>
                 }
             </tbody>
