--- a/ORMs/Belt Prep/ECommerce/Views/Shared/Settings.cshtml
+++ b/ORMs/Belt Prep/ECommerce/Views/Shared/Settings.cshtml
@@ -4,13 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Settings</title>
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/WeddingPlanner.styles.css" asp-append-version="true" />
     </head>
     <body>
         <div style="margin-left: 70px; margin-top: 50px;">
             <h1><a asp-controller="ECommerce" asp-action="Dashboard">Dashboard</a> | <a asp-controller="ECommerce" asp-action="Products">Products</a> | <a asp-controller="ECommerce" asp-action="Orders">Orders</a> | <a asp-controller="ECommerce" asp-action="Customers">Customers</a> | Settings</h1>
         </div>
 
-        Blank Page but successful render
+        <h1>Blank Page but successful render</h1>
     </body>
 </html>
