--- a/ORMs/Entity Framework/ProductsAndCategories/Views/Category/ProductsForCategories.cshtml
+++ b/ORMs/Entity Framework/ProductsAndCategories/Views/Category/ProductsForCategories.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div style="flex: 1;">
                 <h3>Add Product</h3>
-                <form asp-controller="Category" asp-action="AddProduct" asp-route-productId="@ViewBag.Category.CategoryId" method="POST">
+                <form asp-controller="Category" asp-action="AddProduct" asp-route-categoryId="@ViewBag.Category.CategoryId" method="POST">
                     <div>
                         <label asp-for="ProductId"></label>
                         <span asp-validation-for="ProductId"></span>
